--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                   Leave your information, we will contact you
                 </p>
                 <label class="label-input" for="name"
-                  >Nombre
+                  >Name
                   <input
                     class="input-form"
                     type="text"
@@ -108,7 +108,7 @@
                   </svg>
                 </label>
                 <label class="label-input" for="telefono"
-                  >Telefono
+                  >Phone
                   <input
                     class="input-form"
                     type="telefono"
@@ -133,7 +133,7 @@
                     <use href="images/icons.svg#icon-email"></use>
                   </svg>
                 </label>
-                <label class="comment-field">Comentarios </label>
+                <label class="comment-field">Comments</label>
                 <textarea
                   class="comment"
                   name="comment"
@@ -151,11 +151,11 @@
                   />
                   <span class="icon-check"></span>
                   <span class="form-text">
-                    Estoy de acuerdo con el boletin informativo y acepto los
-                    <a href="" class="link-checkbox">terminos y condiciones</a>
+                    I agree with the newsletter and accept the
+                    <a href="" class="link-checkbox">terms and Conditions</a>
                   </span>
                 </label>
-                <button type="submit" class="button-submit">Enviar</button>
+                <button type="submit" class="button-submit">Send</button>
               </form>
             </div>
           </div>
