--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 Leave your information, we will contact you
               </p>
               <form class="form">
-                <label class="form-label">
+                <label class="form-label" for="name">
                   <span class="label-text">Name</span>
                   <input
                     type="text"
@@ -108,14 +108,14 @@
                     <use href="./Img/icon.svg#icon-name"></use>
                   </svg>
                 </label>
-                <label class="form-label">
+                <label class="form-label" for="phone">
                   <span class="label-text">Phone</span>
                   <input
-                    type="text"
+                    type="tel"
                     class="form-input"
                     name="phone"
                     required
-                    minlength="3"
+                    minlength="7"
                     placeholder=" "
                   />
                   <svg class="icon-form" width="13px" height="13px">
